# Jizzarr

./: .gitignore  README.md  app.py  config.py  models.py  pyproject.toml  requirements.txt  watcher.py
jizzarr/: app.py  models.py  search_stash.py  watcher.py
jizzarr/web/static/: collection.css  index.css  logs.css  script.js  styles.css
jizzarr/web/templates/: logs.html  stats.html
static/: collection.css  config.css  index.css  logs.css  search_stash.py  styles.css
templates/: collection.html  config.html  index.html  logs.html  stats.html
