[tool.poetry]
name = "jizzarr"
version = "0.13"
description = "A collection tracker that integrates with TPDB and Stash."
readme = "README.md"
authors = ["Serechops"]
include = []

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
Flask = "^3.0.0"
Flask-Cors = "^3.0.10"
Flask-SQLAlchemy = "^3.1.1"
mutagen = "^1.45.1"
requests = "^2.26.0"
pystray = "^0.17.3"
Pillow = "^10.4.0"
moviepy = "^1.0.3"
watchdog = "^2.1.6"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
aiohttp = {version = "^3.10"}
asyncio = {version = "^3.4.3"}
ffmpeg-python = {version = "^0.2"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.5"

[tool.ruff]
exclude = [".git", "__pycache__", "build", "dist", "node_modules"]
line-length = 320
indent-width = 4
target-version = "py39"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "E722"]

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.scripts]
jizzarr = "app.main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
